fix: System.exit en finally y Runtime.exec para bat en v1.1.2